--- a/src/app/pages/bolsa-novedades/bolsa-novedades.component.html
+++ b/src/app/pages/bolsa-novedades/bolsa-novedades.component.html
@@ -1,8 +1,8 @@
 <!-- Inicio Selector-->
 <div class="container">
     <div class="container bolsa-novedades">
-        <div class="row">
-            <div class="content-input bs-border whit-icon search col-md-6">
+        <div class="row" >
+            <div class="content-input bs-border whit-icon search col-md-4 text-center">
                 <form class='autocomplete-container'>
                     <div class='autocomplete' role='combobox' aria-expanded='false' aria-owns='autocomplete-results'
                         aria-haspopup='listbox'>
@@ -15,15 +15,18 @@
                     </div>
                 </form>
             </div>
-            <div class="col-md-6">
-                <p>Siguiente guía</p>
-                <p>7000345454</p>
+            <div class="col-md-4 text-center" >
+                <p class="text-muted">Siguiente guía<br>7000345454</p>
             </div>
-            <div class="col-md-6">
-
+            <div class="col-md-4 text-center" >
+                    <p class="text-muted">Pendiente<br>99</p>
             </div>
         </div>
+        <div class="row">
+            <img src="img/location.svg" ><span></span> 
+        </div>
 
+        
         <!-- Inicio Área de texto -->
         <div class="content-input col-md-5">
             <div class="mb-2">
